fixed desktop view

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 
         <div class="about">
             <h1 class="head">About</h1>
-            <img src="/img/CSimg.jpg" alt="" srcset="" class="fix">
-            <p class="bio">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae nesciunt magnam, necessitatibus explicabo excepturi temporibus, autem a porro ratione sapiente fuga obcaecati officia quia totam accusantium voluptatibus amet, ducimus quasi eum laborum. Tempora sit expedita soluta repudiandae dolorum, consequuntur optio dicta quisquam tempore consectetur inventore doloremque ullam facere perferendis libero voluptatibus. Amet soluta dolor provident pariatur laudantium blanditiis, aliquam doloribus quos voluptatum autem expedita, cumque minima quod, nihil quibusdam rerum ab sint harum saepe ducimus asperiores eius eum. Consequuntur reiciendis deleniti tempora laudantium odit blanditiis neque temporibus sed distinctio facere.</p>
+            <div class="holder">
+                <img src="/img/CSimg.jpg" alt="" srcset="" class="fix">
+                <p class="bio">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae nesciunt magnam, necessitatibus explicabo excepturi temporibus, autem a porro ratione sapiente fuga obcaecati officia quia totam accusantium voluptatibus amet, ducimus quasi eum laborum. Tempora sit expedita soluta repudiandae dolorum, consequuntur optio dicta quisquam tempore consectetur inventore doloremque ullam facere perferendis libero voluptatibus. Amet soluta dolor provident pariatur laudantium blanditiis, aliquam doloribus quos voluptatum autem expedita, cumque minima quod, nihil quibusdam rerum ab sint harum saepe ducimus asperiores eius eum. Consequuntur reiciendis deleniti tempora laudantium odit blanditiis neque temporibus sed distinctio facere.</p>
+            </div>
         </div>
 
         
